[package]
name = "dicom-pixeldata"
version = "0.8.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Peter Evers <pevers90@gmail.com>"]
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
description = "A high-level API for decoding DICOM objects into images and ndarrays"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["multimedia::images"]
keywords = ["dicom"]
readme = "README.md"

[[bin]]
name = "dicom-transcode"
path = "src/bin/dicom-transcode.rs"
required-features = ["cli"]

[dependencies]
dicom-object = { path = "../object", version = "0.8.0" }
dicom-core = { path = "../core", version = "0.8.1" }
dicom-encoding = { path = "../encoding", version = "0.8.1" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.8.1" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.8.0" }
snafu = "0.8"
byteorder = "1.4.3"
gdcm-rs = { version = "0.6", optional = true }
rayon = { version = "1.5.0", optional = true }
ndarray = { version = "0.15.1", optional = true }
num-traits = "0.2.12"
tracing = "0.1.34"

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["jpeg", "png", "pnm", "tiff", "webp", "bmp", "exr"]
optional = true

[dependencies.clap]
version = "4.4.2"
optional = true
features = ["cargo", "derive"]

[dependencies.tracing-subscriber]
version = "0.3.17"
optional = true

[dev-dependencies]
rstest = "0.23"
dicom-test-files = "0.3"

[features]
default = ["rayon", "native"]

ndarray = ["dep:ndarray"]
image = ["dep:image"]

# Rust native image codec implementations
native = ["dicom-transfer-syntax-registry/native", "jpeg", "rle"]
# native JPEG codec implementation
jpeg = ["dicom-transfer-syntax-registry/jpeg"]
# native JPEG XL codec implementation
jpegxl = ["dicom-transfer-syntax-registry/jpegxl"]
# native RLE lossless codec implementation
rle = ["dicom-transfer-syntax-registry/rle"]
# JPEG 2000 decoding via OpenJPEG static linking
openjpeg-sys = ["dicom-transfer-syntax-registry/openjpeg-sys"]
# JPEG 2000 decoding via Rust port of OpenJPEG
openjp2 = ["dicom-transfer-syntax-registry/openjp2"]
# JpegLS via CharLS
charls = ["dicom-transfer-syntax-registry/charls"]

# replace pixel data decoding to use GDCM
gdcm = ["gdcm-rs"]
# use Rayon for image decoding
rayon = ["dep:rayon", "image?/rayon", "dicom-transfer-syntax-registry/rayon"]

# enable command line tools
cli = ["dep:clap", "dep:tracing-subscriber"]

[package.metadata.docs.rs]
features = ["image", "ndarray"]
