[package]
name = "dicom-scpproxy"
version = "0.8.2"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Paul Knopf <pauldotknopf@gmail.com>"]
description = "A proxy SCP server, for logging and diagnostics"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
dicom-ul = { path = "../ul/", version = "0.8.2" }
snafu = "0.8"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
bytes = "1.6"
