[package]
name = "dicom-storescp"
version = "0.2.2"
authors = ["Victor Saase <vsaase@gmail.com>", "Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A server accepting DICOM C-STORE"
categories = ["command-line-utilities"]
keywords = ["dicom", "store"]
readme = "README.md"

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
dicom-core = { path = '../core', version = "0.6.3" }
dicom-ul = { path = '../ul', version = "0.5.1" }
dicom-object = { path = '../object', version = "0.6.3" }
dicom-encoding = { path = "../encoding/", version = "0.6.1" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.6.1" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.6.2" }
snafu = "0.8"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
