[package]
name = "dicom-storescu"
version = "0.9.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A DICOM C-ECHO command line interface"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[features]
default = ["transcode"]
# support DICOM transcoding
transcode = ["dep:dicom-pixeldata"]

[dependencies]
clap = { version  = "4.0.18", features = ["derive"] }
dicom-core = { path = '../core', version = "0.9" }
dicom-dictionary-std = { path = "../dictionary-std/", version = "0.9" }
dicom-dump = { path = "../dump", version = "0.9.0", default-features = false }
dicom-encoding = { path = "../encoding/", version = "0.9" }
dicom-object = { path = '../object', version = "0.9" }
dicom-pixeldata = { path = "../pixeldata", version = "0.9", optional = true }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.9" }
dicom-ul = { path = '../ul', version = "0.9", features = ["async-tls"] }
walkdir = "2.3.2"
indicatif = "0.17.0"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
snafu = "0.8"
dicom-app-common = { version = "0.1.0", path = "../app-common" }
rustls = "0.23.31"
tokio-rustls = "0.26.3"

[dependencies.tokio]
version = "1.38.0"
features = ["rt", "rt-multi-thread", "macros", "sync"]
