[package]
name = "dicom-storescu"
version = "0.10.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
description = "A DICOM C-ECHO command line interface"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[features]
default = ["transcode"]
# support DICOM transcoding
transcode = ["dep:dicom-pixeldata"]
# support DICOM over TLS
tls = ["dicom-app-common/tls", "dicom-ul/async-tls", "dep:rustls", "dep:tokio-rustls"]

[dependencies]
clap = { version  = "4.0.18", features = ["derive"] }
dicom-app-common = { version = "0.10", path = "../app-common", default-features = false }
dicom-core = { path = '../core', version = "0.10" }
dicom-dictionary-std = { path = "../dictionary-std", version = "0.10" }
dicom-dump = { path = "../dump", version = "0.10", default-features = false }
dicom-encoding = { path = "../encoding", version = "0.10" }
dicom-object = { path = "../object", version = "0.10" }
dicom-pixeldata = { path = "../pixeldata", version = "0.10", optional = true }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry", version = "0.10" }
dicom-ul = { path = "../ul", version = "0.10", features = ["async"] }
walkdir = "2.3.2"
indicatif = "0.18"
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
snafu = "0.9"
rustls = { version = "0.23.31", optional = true }
tokio-rustls = { version = "0.26.3", optional = true }

[dependencies.tokio]
version = "1.38.0"
features = ["rt", "rt-multi-thread", "macros", "sync"]
