[package]
name = "dicom-toimage"
version = "0.2.2"
edition = "2018"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A CLI tool for converting DICOM files into general purpose image files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["cli", "dicom", "image", "image-conversion"]
readme = "README.md"

[features]
default = ['dicom-object/inventory-registry', 'dicom-pixeldata/native']

[dependencies]
clap = { version  = "4.0.18", features = ["derive"] }
dicom-core = { version = "0.6.3", path = "../core" }
dicom-dictionary-std = { version = "0.6.1", path = "../dictionary-std" }
dicom-object = { path = "../object/", version = "0.6.3" }
dicom-pixeldata = { path = "../pixeldata/", version = "0.2.2", default-features = false, features = ["image", "rayon"] }
snafu = "0.8"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
