[package]
name = "dicom-transfer-syntax-registry"
version = "0.6.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A registry of DICOM transfer syntaxes"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom"]
readme = "README.md"

[features]
default = ["rayon"]

# inventory for compile time plugin-based transfer syntax registration
inventory-registry = ['dicom-encoding/inventory-registry']

# natively implemented image encodings
native = ["jpeg", "openjp2", "rle"]
# native JPEG support
jpeg = ["jpeg-decoder", "jpeg-encoder"]
# native JPEG 2000 support via the OpenJPEG Rust port
openjp2 = ["dep:jpeg2k", "jpeg2k/openjp2"]
# native RLE lossless support
rle = []
# enable Rayon for JPEG decoding
rayon = ["jpeg-decoder?/rayon"]
# build OpenJPEG with multithreading
openjpeg-sys-threads = ["rayon", "jpeg2k?/threads"]

# JPEG 2000 support via the OpenJPEG Rust port,
# overrides `openjp2` if present
openjpeg-sys = ["dep:jpeg2k", "jpeg2k/openjpeg-sys"]

[dependencies]
dicom-core = { path = "../core", version = "0.6.1" }
dicom-encoding = { path = "../encoding", version = "0.6.0" }
lazy_static = "1.2.0"
byteordered = "0.6"
tracing = "0.1.34"

[dependencies.jpeg2k]
version = "0.6.6"
optional = true
default-features = false

[dependencies.jpeg-decoder]
version = "0.3.0"
optional = true

[dependencies.jpeg-encoder]
version = "0.5.1"
optional = true

[package.metadata.docs.rs]
features = ["native"]

[dev-dependencies]
dicom-test-files = "0.2.1"
