[package]
name = "dicom-transfer-syntax-registry"
version = "0.6.2"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A registry of DICOM transfer syntaxes"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
keywords = ["dicom"]
readme = "README.md"

[features]
default = ["rayon", "simd"]

# inventory for compile time plugin-based transfer syntax registration
inventory-registry = ['dicom-encoding/inventory-registry']

# natively implemented image encodings
native = ["jpeg", "rle"]
# native implementations that work on Windows
native_windows = ["jpeg", "rle"]
# native JPEG support
jpeg = ["jpeg-decoder", "jpeg-encoder"]
# JPEG 2000 support via the OpenJPEG Rust port,
# works on Linux and a few other platforms
openjp2 = ["dep:jpeg2k", "jpeg2k/openjp2"]
# native RLE lossless support
rle = []
# enable Rayon for JPEG decoding
rayon = ["jpeg-decoder?/rayon"]
# enable SIMD operations for JPEG encoding
simd = ["jpeg-encoder?/simd"]

# JPEG 2000 support via the OpenJPEG Rust port,
# conflicts with `openjp2`
openjpeg-sys = ["dep:jpeg2k", "jpeg2k/openjpeg-sys"]

# build OpenJPEG with multithreading,
# implies "rayon"
openjpeg-sys-threads = ["rayon", "jpeg2k?/threads"]

[dependencies]
dicom-core = { path = "../core", version = "0.6.3" }
dicom-encoding = { path = "../encoding", version = "0.6.1" }
lazy_static = "1.2.0"
byteordered = "0.6"
tracing = "0.1.34"

[dependencies.jpeg2k]
version = "0.6.6"
optional = true
default-features = false

[dependencies.jpeg-decoder]
version = "0.3.0"
optional = true

[dependencies.jpeg-encoder]
version = "0.6"
optional = true

[package.metadata.docs.rs]
features = ["native"]

[dev-dependencies]
dicom-test-files = "0.3"
