[package]
name = "dicom-ul"
version = "0.8.2"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Paul Knopf <pauldotknopf@gmail.com>"]
description = "Types and methods for interacting with the DICOM Upper Layer Protocol"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["network-programming"]
keywords = ["dicom", "network"]
readme = "README.md"

[dependencies]
bon = "3.7.2"
byteordered = "0.6"
bytes = "^1.6"
dicom-core = { version = "0.8.2", path = "../core" }
dicom-dictionary-std = { version = "0.8.1", path = "../dictionary-std" }
dicom-encoding = { path = "../encoding/", version = "0.8.2" }
dicom-object = { version = "0.8.2", path = "../object" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.8.2", default-features = false }
snafu = "0.8"
tracing = "0.1.34"

[dependencies.tokio]
version = "^1.38"
optional = true
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time"
]

[dev-dependencies]
dicom-dictionary-std = { path = "../dictionary-std" }
matches = "0.1.8"
rstest = "0.25"
tokio = { version = "^1.38", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }

[features]
async = ["dep:tokio"]
default = []

[package.metadata.docs.rs]
features = ["async"]
