[package]
name = "dicom-ul"
version = "0.9.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Paul Knopf <pauldotknopf@gmail.com>"]
description = "Types and methods for interacting with the DICOM Upper Layer Protocol"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["network-programming"]
keywords = ["dicom", "network"]
readme = "README.md"

[dependencies]
byteordered = "0.6"
bytes = "^1.6"
dicom-encoding = { path = "../encoding/", version = "0.9" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.9", default-features = false }
snafu = "0.8"
tracing = "0.1.34"

[dependencies.tokio]
version = "^1.38"
optional = true
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time"
]

[dev-dependencies]
dicom-dictionary-std = { path = "../dictionary-std" }
matches = "0.1.8"
rstest = "0.26.1"
tokio = { version = "^1.38", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
dicom-core = { path = '../core' }
dicom-object = { path = '../object' }

[features]
async = ["dep:tokio"]
default = []

[package.metadata.docs.rs]
features = ["async"]
