[package]
name = "dicom-ul"
version = "0.9.0"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>", "Paul Knopf <pauldotknopf@gmail.com>"]
description = "Types and methods for interacting with the DICOM Upper Layer Protocol"
edition = "2018"
rust-version = "1.72.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["network-programming"]
keywords = ["dicom", "network"]
readme = "README.md"

[dependencies]
byteordered = "0.6"
bytes = "^1.6"
cfg-if = "1.0.3"
dicom-encoding = { path = "../encoding/", version = "0.9" }
dicom-transfer-syntax-registry = { path = "../transfer-syntax-registry/", version = "0.9", default-features = false }
snafu = "0.8"
tracing = "0.1.34"

[dependencies.tokio]
version = "^1.38"
optional = true
features = [
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time"
]
[dependencies.rustls]
version = "0.23.31"
optional = true
default-features = false
features = [
  "logging",
  "tls12",
  "std"
]

[dependencies.tokio-rustls]
version = "0.26.2"
optional = true
default-features = false
features = [
  "logging",
  "tls12",
]

[dev-dependencies]
dicom-dictionary-std = { path = "../dictionary-std" }
matches = "0.1.8"
rstest = "0.26.1"
tokio = { version = "^1.38", features = ["io-util", "macros", "net", "rt", "rt-multi-thread"] }
dicom-core = { path = '../core' }
dicom-object = { path = '../object' }
time = "0.3"
rustls-cert-gen = "0.2.0"
rcgen = "0.14.4"
# Install full features of rustls for testing
rustls = "0.23.31"

[features]
async = ["dep:tokio"]
sync-tls = ["dep:rustls"]
async-tls=["async", "sync-tls", "dep:tokio-rustls"]
default = []
full = ["async-tls"]

[package.metadata.docs.rs]
features = ["async", "sync-tls", "async-tls"]
