[package]
name = "dicom-dictionary-builder"
version = "0.3.2"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A generator of DICOM dictionaries from standard documentation"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["dicom"]
readme = "README.md"

[[bin]]
name = "dicom-dictionary-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["cargo"] }
serde = { version = "1.0.55", features = ["derive"] }
serde_json = "1.0.17"
heck = "0.4.0"
ureq = "2.4.0"
eyre = "0.6.8"

[dependencies.regex]
version = "1.6.0"
default-features = false
features = ["std", "perf", "unicode-case", "unicode-perl"]
