[package]
name = "dicom-dictionary-builder"
version = "0.8.1"
authors = ["Eduardo Pinho <enet4mikeenet@gmail.com>"]
description = "A generator of DICOM dictionaries from standard documentation and other sources"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Enet4/dicom-rs"
categories = ["command-line-utilities"]
keywords = ["dicom", "generator", "dictionary"]
readme = "README.md"

[[bin]]
name = "dicom-dictionary-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.18", features = ["cargo", "derive"] }
serde = { version = "1.0.55", features = ["derive"] }
heck = "0.5.0"
ureq = "3.0.11"
sxd-document = "0.3.2"
eyre = "0.6.12"
sxd-xpath = "0.4.2"

[dependencies.regex]
version = "1.6.0"
default-features = false
features = ["std", "perf", "unicode-case", "unicode-perl"]
