[package]
name = "dimse-message-builder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dimse-message-builder"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
eyre = "0.6"
heck = "0.5"
prettyplease = "0.2"
