[package]
name = "dicom-object-fuzz"
version = "0.0.0"
description = "Fuzz testing for the dicom-object crate"
authors = []
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dicom-object]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "open_file"
path = "fuzz_targets/open_file.rs"
test = false
doc = false

[profile.release]
debug = true
